Fix for header spacing. Update collection page with tables.

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -207,7 +207,7 @@ div#content {
 
 header {
 	display: inline-block;
-	height: 10%;
+	height: 10vmax;
 	position: relative;
 	text-align: center;
 	width: 100%;
